--- a/jenkins/Dockerfile
+++ b/jenkins/Dockerfile
@@ -7,6 +7,7 @@ RUN curl -sL https://deb.nodesource.com/setup_7.x | bash -
 RUN apt-get install -y nodejs
 RUN npm install -g typescript
 RUN npm install -g gulp
+RUN npm install -g istanbul
 RUN npm install -g @angular/cli
 
 USER jenkins
